<resources>
    <string name="app_name">onlyoffice</string>

    <string name="documents">Documents</string>
    <string name="rooms">Rooms</string>
    <string name="trash">Trash</string>
    <string name="profile">Profile</string>
    
    <string name="connect_to_onlyoffice">Connect to ONLYOFFICE</string>
    <string name="portal">Portal</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="logout">Logout</string>

    <string name="invalid">Invalid portal or email</string>
    <string name="failed">User authentication failed</string>
    <string name="not_found">The user could not be found</string>
</resources>